log/build_2023-01-27_15-36-10/mypkg/stderr.log
  File "/home/masanao/ros2_ws/install/mypkg/lib/python3.6/site-packages/mypkg/talker.py", line 11
    return response
                  ^
SyntaxError: 'return' outside function

